--- a/android/TheCookBook/app/src/main/AndroidManifest.xml
+++ b/android/TheCookBook/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
         <activity android:name=".FriendsActivity" />
         <activity android:name=".CreateRecipeActivity" />
         <activity android:name=".FriendsPofileActivity" />
-        <activity android:name=".TimelineActivity"></activity>
+        <activity android:name=".TimelineActivity" />
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".OthersFriendsActivity" />
+        <activity android:name=".NotFriendProfileActivity"></activity>
     </application>
 
 </manifest>
