Added uploading pictures functionality

--- a/android/TheCookBook/app/src/main/AndroidManifest.xml
+++ b/android/TheCookBook/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".TimelineActivity" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".OthersFriendsActivity" />
-        <activity android:name=".NotFriendProfileActivity"></activity>
+        <activity android:name=".NotFriendProfileActivity" />
+        <activity android:name=".PrivateMessaging"></activity>
     </application>
 
 </manifest>
