--- a/android/TheCookBook/app/build.gradle
+++ b/android/TheCookBook/app/build.gradle
@@ -1,5 +1,14 @@
-apply plugin: 'com.android.application'
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 
+apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 android {
     compileSdkVersion 21
     buildToolsVersion "23.0.2"
@@ -18,6 +27,10 @@ android {
         }
     }
 }
+repositories {
+    mavenCentral()
+    maven { url 'https://maven.fabric.io/public' }
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -25,4 +38,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.code.gson:gson:2.5'
     compile 'com.infstory:retrofit:2.0.0'
+    compile('com.twitter.sdk.android:twitter:1.9.0@aar') {
+        transitive = true;
+    }
 }
